deploy/opengauss-docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-docs
  name: opengauss-docs
