deploy/opengauss-docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengauss-docs-deployment
  namespace: opengauss-docs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: opengauss-docs
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opengauss-docs
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/website-docs:v1.0.20221103185525
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        name: opengauss-docs
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
