deploy/opengauss-docs/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opengauss-docs-ingress
  namespace: opengauss-docs
spec:
  tls:
    - hosts:
        - docs.opengauss.org
      secretName: opengauss-docs-tls
  rules:
  - host: docs.opengauss.org
    http:
      paths:
      - backend:
          serviceName: opengauss-docs-service
          servicePort: 80
        path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: https://docs.opengauss.org$request_uri
  name: opengauss-docs-osinfra-ingress
  namespace: opengauss-docs
spec:
  rules:
  - host: docs-opengauss.osinfra.cn
  tls:
  - hosts:
    - docs-opengauss.osinfra.cn
    secretName: opengauss-docs-osinfra-tls
